--- a/web/maqueta-web/src/app/login/login.component.html
+++ b/web/maqueta-web/src/app/login/login.component.html
@@ -1,1 +1,70 @@
-<p>login works!</p>
+<img 
+    src="assets/images/Alertify.png" 
+    alt="IngresariCloud" 
+/>
+
+<mat-card>
+    <mat-card-header class="mx-auto">
+        <mat-card-title>Inicie sesión</mat-card-title>
+    </mat-card-header>
+    <form [formGroup]="loginForm">
+        <mat-card-content>
+            <div>
+                <mat-form-field>
+                    <mat-label>Usuario</mat-label>
+                    <input matInput placeholder="Usuario" formControlName="username"/>
+                    <mat-error
+                        *ngIf="loginFormData.password.errors?.required"
+                    >
+                    ¡Este campo es obligatorio!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field>
+                    <mat-label>Contraseña</mat-label>
+                    <input matInput placeholder="Contraseña" type="password" formControlName="password"/>
+                    <mat-error
+                        *ngIf="loginFormData.password.errors?.required"
+                    >
+                        ¡Este campo es obligatorio!
+                    </mat-error>
+                    <mat-error
+                        *ngIf="loginFormData.password.errors?.minlength"
+                    >
+                        ¡No cumple con longitud mínima!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <button mat-button formControlName="loginButton">
+                    <mat-label>Ingresar</mat-label>
+                </button>
+            </div>
+        </mat-card-content>
+    </form>
+</mat-card>
+<mat-card>
+    <mat-card-header class="mx-auto">
+        <mat-card-title>Inicie sesión con</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div>
+            <img
+                src="assets/images/iCloudLogo.png" 
+                alt="IngresariCloud" 
+            />
+        </div>
+        <div>
+            <img
+                src="assets/images/GoogleLogo.png" 
+                alt="IngresarGoogle" 
+            />
+        </div>
+        <div>
+            <button mat-button>
+                <mat-label>Cree una cuenta aquí</mat-label>
+            </button>
+        </div>
+    </mat-card-content>
+</mat-card>
