--- a/web/maqueta-web/src/app/signin/signin.component.html
+++ b/web/maqueta-web/src/app/signin/signin.component.html
@@ -1,1 +1,77 @@
-<p>signin works!</p>
+<img 
+    src="assets/images/Alertify.png" 
+    alt="IngresariCloud" 
+/>
+<mat-card>
+    <mat-card-header class="mx-auto">
+        <mat-card-title>Cree su cuenta</mat-card-title>
+    </mat-card-header>
+    <form [formGroup]="signinForm">
+        <mat-card-content>
+            <div>
+                <mat-form-field>
+                    <mat-label>Usuario</mat-label>
+                    <input matInput placeholder="Usuario" formControlName="username"/>
+                    <mat-hint>Digite su usuario</mat-hint>
+                    <mat-error
+                        *ngIf="signinFormData.password.errors?.required"
+                    >
+                    ¡Este campo es obligatorio!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field>
+                    <mat-label>Fecha de nacimiento</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="birthDate">
+                    <mat-hint>Escoja su fecha de nacimiento</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-error *ngIf="signinForm.get('birthDate').hasError('required') && signinForm.get('birthDate').touched">
+                        ¡Fecha de nacimiento es requerida!
+                    </mat-error>
+                    <mat-error *ngIf="signinForm.get('birthDate').hasError('matDatepickerParse') && signinForm.get('birthDate').touched">
+                        ¡Formato de fecha inválido!
+                    </mat-error>
+                  </mat-form-field>                  
+            </div>
+            <div>
+                <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder="Email" type="email" formControlName="email"/>
+                    <mat-error
+                        *ngIf="signinFormData.email.errors?.required"
+                    >
+                        ¡Este campo es obligatorio!
+                    </mat-error>
+                    <mat-error
+                        *ngIf="signinFormData.email.errors?.minlength"
+                    >
+                        ¡No cumple con longitud mínima!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field>
+                    <mat-label>Contraseña</mat-label>
+                    <input matInput placeholder="Contraseña" type="password" formControlName="password"/>
+                    <mat-error
+                        *ngIf="signinFormData.password.errors?.required"
+                    >
+                        ¡Este campo es obligatorio!
+                    </mat-error>
+                    <mat-error
+                        *ngIf="signinFormData.password.errors?.minlength"
+                    >
+                        ¡No cumple con longitud mínima!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <button mat-button formControlName="signinButton">
+                    <mat-label>Ingresar</mat-label>
+                </button>
+            </div>
+        </mat-card-content>
+    </form>
+</mat-card>
