Web-004: se define el HTML de las pantallas de gestión de usuario y eliminación de cuenta, falta trabajar en el CSS y en la interacción de los botones.

--- a/web/maqueta-web/src/app/login/login.component.html
+++ b/web/maqueta-web/src/app/login/login.component.html
@@ -37,7 +37,7 @@
                 </mat-form-field>
             </div>
             <div>
-                <button mat-button formControlName="loginButton">
+                <button mat-button id="login">
                     <mat-label>Ingresar</mat-label>
                 </button>
             </div>
@@ -62,7 +62,7 @@
             />
         </div>
         <div>
-            <button mat-button>
+            <button mat-button id="createAccount">
                 <mat-label>Cree una cuenta aquí</mat-label>
             </button>
         </div>
