--- a/web/maqueta-web/src/app/signin/signin.component.html
+++ b/web/maqueta-web/src/app/signin/signin.component.html
@@ -1,6 +1,6 @@
 <img 
     src="assets/images/Alertify.png" 
-    alt="IngresariCloud" 
+    alt="Alertify" 
 />
 <mat-card>
     <mat-card-header class="mx-auto">
