--- a/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
+++ b/web/maqueta-web/src/app/user-deletion/user-deletion.component.html
@@ -1,1 +1,64 @@
-<p>user-deletion works!</p>
+<div class="navbar">
+    <mat-list>
+      <mat-list-item>
+        <button mat-button color="primary">Button 1</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Button 2</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Button 3</button>
+      </mat-list-item>
+    </mat-list>
+  </div>
+<mat-card>
+    <img 
+    src="assets/images/Alertify2.png" 
+    alt="Alertify2" 
+    />
+</mat-card>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Eliminar cuenta</mat-card-title>
+    </mat-card-header>
+    
+    <p>Nos duele que continue con el proceso de eliminación de cuenta.</p>
+
+    <p>Es importante enfatizar en las implicaciones de eliminar la cuenta, que se listan a continuación:</p>
+    
+    <ul>
+        <li>Irreversibilidad: al eliminarse la cuenta, esta no podrá ser restaurada ya que la información asociada ha sido eliminada.</li>
+        <li>Pérdida de datos: al eliminarse la cuenta, la información personal asociada a la cuenta, los datos asociados a la aplicación y la personalización de la aplicación tanto web como móvil serán todos eliminados.</li>
+        <li>Acceso y uso de la aplicación móvil: el acceso y uso de la aplicación móvil no será posible una vez la cuenta haya sido eliminada.</li>
+    </ul>
+    
+    
+    <p>Si entiende y está de acuerdo con asumir las implicaciones ya mencionadas entonces por favor digite su contraseña como muestra de confirmación para eliminar la cuenta.</p>
+    
+    <form [formGroup]="userDeletionForm">
+        <mat-card-content>
+            <div>
+                <mat-form-field>
+                    <mat-label>Contraseña</mat-label>
+                    <mat-hint>Digite su contraseña</mat-hint>
+                    <input matInput placeholder="Contraseña" type="password" formControlName="password"/>
+                    <mat-error
+                        *ngIf="userDeletionFormData.password.errors?.required"
+                    >
+                        ¡Este campo es obligatorio!
+                    </mat-error>
+                    <mat-error
+                        *ngIf="userDeletionFormData.password.errors?.minlength"
+                    >
+                        ¡No cumple con longitud mínima!
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div>
+                <button mat-button id="deleteButton">
+                    <mat-label>Eliminar cuenta</mat-label>
+                </button>
+            </div>
+        </mat-card-content>
+    </form>
+</mat-card>
