Web-005: se define el HTML de la pantalla  de reporte, falta trabajar en el CSS y en la interacción de los botones.

--- a/web/maqueta-web/src/app/report/report.component.html
+++ b/web/maqueta-web/src/app/report/report.component.html
@@ -1,1 +1,66 @@
-<p>report works!</p>
+<div class="navbar">
+    <mat-list>
+      <mat-list-item>
+        <button mat-button color="primary">Button 1</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Button 2</button>
+      </mat-list-item>
+      <mat-list-item>
+        <button mat-button color="primary">Button 3</button>
+      </mat-list-item>
+    </mat-list>
+</div>
+
+<mat-card>
+    <img 
+    src="assets/images/Alertify2.png" 
+    alt="Alertify2" 
+    />
+</mat-card>
+
+<mat-card>
+    <mat-card-header class="mx-auto">
+        <mat-card-title>Reporte - Histórico de Pagos</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!-- Column Definitions -->
+            <ng-container matColumnDef="col1">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.col1}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="col2">
+            <th mat-header-cell *matHeaderCellDef> Fecha de Pago </th>
+            <td mat-cell *matCellDef="let element"> {{element.col2}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="col3">
+            <th mat-header-cell *matHeaderCellDef> Tipo de obligación </th>
+            <td mat-cell *matCellDef="let element"> {{element.col3}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="col4">
+            <th mat-header-cell *matHeaderCellDef> Valor </th>
+            <td mat-cell *matCellDef="let element"> {{element.col4}} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="col5">
+            <th mat-header-cell *matHeaderCellDef> Banco </th>
+            <td mat-cell *matCellDef="let element"> {{element.col5}} </td>
+            </ng-container>
+
+            <!-- Action Column with Button -->
+            <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Ver Detalle </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-button>Ingresar</button>
+            </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </mat-card-content>
+</mat-card>
