--- a/web/maqueta-web/src/app/report/report.component.html
+++ b/web/maqueta-web/src/app/report/report.component.html
@@ -1,15 +1,15 @@
 <div class="navbar">
-    <mat-list>
-      <mat-list-item>
-        <button mat-button color="primary">Button 1</button>
-      </mat-list-item>
-      <mat-list-item>
-        <button mat-button color="primary">Button 2</button>
-      </mat-list-item>
-      <mat-list-item>
-        <button mat-button color="primary">Button 3</button>
-      </mat-list-item>
-    </mat-list>
+  <mat-list>
+    <mat-list-item>
+      <img mat-card-image src="assets/images/menuIcon.png" alt="menu"/>
+    </mat-list-item>
+    <mat-list-item>
+      <img mat-card-image src="assets/images/userSettingsIcon.png" alt="user settings"/>
+    </mat-list-item>
+    <mat-list-item>
+      <img mat-card-image src="assets/images/closeSessionIcon.png" alt="close session"/>
+    </mat-list-item>
+  </mat-list>
 </div>
 
 <mat-card>
