--- a/web/maqueta-web/src/app/user-settings/user-settings.component.html
+++ b/web/maqueta-web/src/app/user-settings/user-settings.component.html
@@ -1,16 +1,17 @@
 <div class="navbar">
     <mat-list>
       <mat-list-item>
-        <button mat-button color="primary">Button 1</button>
+        <img mat-card-image src="assets/images/menuIcon.png" alt="menu"/>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button color="primary">Button 2</button>
+        <img mat-card-image src="assets/images/userSettingsIcon.png" alt="user settings"/>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button color="primary">Button 3</button>
+        <img mat-card-image src="assets/images/closeSessionIcon.png" alt="close session"/>
       </mat-list-item>
     </mat-list>
 </div>
+
 <mat-card>
     <img 
     src="assets/images/Alertify2.png" 
