Web-007: se define el CSS de la pantalla de reporte y se modifica HTML para mejorar aspecto. Falta implementar la interacción de los botones.

--- a/web/maqueta-web/src/app/report/report.component.css
+++ b/web/maqueta-web/src/app/report/report.component.css
@@ -1,22 +1,88 @@
 /* Import Roboto */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+.navbar {
+    width: 61px; /* Set the width of the navbar */
+    background-color: #4C7573; /* Change to white for better visibility */
+    padding: 0px; /* Padding around the navbar */
+    position: fixed; /* Fix it on the side */
+    height: 100%; /* Full height */
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1); /* Optional shadow for effect */
+    z-index: 1000; /* Ensure it is on top */
+    }
+
+    mat-list{
+        position: absolute;
+        top: 50px;
+    }
+
+    mat-list-item{
+        height: 45px !important;
+        padding-left: 17px;
+    }
+
+        .text-container {
+            display: flex; /* Use flexbox for centering */
+            justify-content: center; /* Center horizontally */
+            height: 40px;
+        }
+
+        .overlay-text {
+            font-size: 12px;
+            text-align: center; /* Center text within the div */
+            color: #e2e2e2; /* Text color */
+            font-weight: 580;
+            white-space: normal; /* Allow text to wrap */
+            word-wrap: break-word; /* Break long words if necessary */
+            line-height: 1.2;
+        }
+
 mat-card{
     background-color: #fff;
-    margin-left: 61px;
+    margin-left: 103px;
+    border: none;
+    box-shadow: none;
 }
+
+    mat-card .alertify-title {
+        height: 100px;
+        width: 270px;
+        position: relative;
+        top: 20px;
+    }
+
+    #table{
+        position: relative;
+        top: 50px;
+    }
+
+    mat-card-title{
+        font-size: 24px;
+    }
 
     mat-card button{
         background-color: #005d52;
         font-family: 'Roboto', sans-serif;
     }
 
-.navbar {
-    width: 61px; /* Set the width of the navbar */
-    background-color: #4C7573; /* Change to white for better visibility */
-    padding: 16px; /* Padding around the navbar */
-    position: fixed; /* Fix it on the side */
-    height: 100%; /* Full height */
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1); /* Optional shadow for effect */
-    z-index: 1000; /* Ensure it is on top */
+    table{
+        background-color: #e2e2e2;
     }
+
+        table th {
+            color: #000000;
+            border-color: #000000;
+            font-size: 20px;   
+        }
+
+        table td {
+            color: #919191 !important;
+            border-color: #000000;
+            font-size: 16px;
+        }
+
+        table td button{
+            border-radius: 100px;
+            width: 160px;
+            height: 40px;
+        }
