--- a/web/maqueta-web/src/app/login/login.component.html
+++ b/web/maqueta-web/src/app/login/login.component.html
@@ -1,9 +1,12 @@
-<img 
-    src="assets/images/Alertify.png" 
-    alt="IngresariCloud" 
-/>
+<mat-card id="logo">
+    <img 
+        src="assets/images/Alertify.png" 
+        alt="IngresariCloud" 
+    />
+</mat-card>
 
-<mat-card>
+
+<mat-card class="loginCard">
     <mat-card-header class="mx-auto">
         <mat-card-title>Inicie sesión</mat-card-title>
     </mat-card-header>
@@ -11,8 +14,9 @@
         <mat-card-content>
             <div>
                 <mat-form-field>
-                    <mat-label>Usuario</mat-label>
+                    <mat-label class="formLabel">Usuario</mat-label>
                     <input matInput placeholder="Usuario" formControlName="username"/>
+                    <mat-hint>Digite su usuario</mat-hint>
                     <mat-error
                         *ngIf="loginFormData.password.errors?.required"
                     >
@@ -22,8 +26,9 @@
             </div>
             <div>
                 <mat-form-field>
-                    <mat-label>Contraseña</mat-label>
+                    <mat-label class="formLabel">Contraseña</mat-label>
                     <input matInput placeholder="Contraseña" type="password" formControlName="password"/>
+                    <mat-hint>Digite su contraseña</mat-hint>
                     <mat-error
                         *ngIf="loginFormData.password.errors?.required"
                     >
@@ -37,33 +42,33 @@
                 </mat-form-field>
             </div>
             <div>
-                <button mat-button id="login">
-                    <mat-label>Ingresar</mat-label>
+                <button mat-button id="loginButton">
+                    <mat-label class="buttonLabel">Ingresar</mat-label>
                 </button>
             </div>
         </mat-card-content>
     </form>
 </mat-card>
-<mat-card>
+<mat-card class="loginOthers">
     <mat-card-header class="mx-auto">
         <mat-card-title>Inicie sesión con</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-        <div>
+    <mat-card-content class="otherLogins">
+        <div class="image-container">
             <img
                 src="assets/images/iCloudLogo.png" 
-                alt="IngresariCloud" 
+                alt="IngresariCloud"
+                id="IngresariCloud" 
             />
-        </div>
-        <div>
             <img
                 src="assets/images/GoogleLogo.png" 
                 alt="IngresarGoogle" 
+                id="IngresarGoogle"
             />
         </div>
-        <div>
-            <button mat-button id="createAccount">
-                <mat-label>Cree una cuenta aquí</mat-label>
+        <div class="buttonContainer">
+            <button mat-button id="createAccountButton">
+                <mat-label class="buttonLabel">Cree una cuenta aquí</mat-label>
             </button>
         </div>
     </mat-card-content>
