--- a/web/maqueta-web/src/app/signin/signin.component.html
+++ b/web/maqueta-web/src/app/signin/signin.component.html
@@ -42,6 +42,7 @@
                 <mat-form-field>
                     <mat-label class="formLabel">Email</mat-label>
                     <input matInput placeholder="Email" type="email" formControlName="email"/>
+                    <mat-hint>Digite su correo electrónico</mat-hint>
                     <mat-error
                         *ngIf="signinFormData.email.errors?.required"
                     >
@@ -58,6 +59,7 @@
                 <mat-form-field>
                     <mat-label class="formLabel">Contraseña</mat-label>
                     <input matInput placeholder="Contraseña" type="password" formControlName="password"/>
+                    <mat-hint>Digite su contraseña</mat-hint>
                     <mat-error
                         *ngIf="signinFormData.password.errors?.required"
                     >
