--- a/web/maqueta-web/src/app/user-settings/user-settings.component.css
+++ b/web/maqueta-web/src/app/user-settings/user-settings.component.css
@@ -1,22 +1,179 @@
 /* Import Roboto */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-mat-card{
-    background-color: #fff;
-    margin-left: 61px;
-}
-
-    mat-card button{
-        background-color: #005d52;
-        font-family: 'Roboto', sans-serif;
-    }
-
 .navbar {
     width: 61px; /* Set the width of the navbar */
     background-color: #4C7573; /* Change to white for better visibility */
-    padding: 16px; /* Padding around the navbar */
+    padding: 0px; /* Padding around the navbar */
     position: fixed; /* Fix it on the side */
     height: 100%; /* Full height */
     box-shadow: 2px 0 5px rgba(0,0,0,0.1); /* Optional shadow for effect */
     z-index: 1000; /* Ensure it is on top */
     }
+
+    mat-list{
+        position: absolute;
+        top: 50px;
+    }
+
+    mat-list-item{
+        height: 45px !important;
+        padding-left: 17px;
+    }
+
+        .text-container {
+            display: flex; /* Use flexbox for centering */
+            justify-content: center; /* Center horizontally */
+            height: 40px;
+        }
+
+        .overlay-text {
+            font-size: 12px;
+            text-align: center; /* Center text within the div */
+            color: #e2e2e2; /* Text color */
+            font-weight: 580;
+            white-space: normal; /* Allow text to wrap */
+            word-wrap: break-word; /* Break long words if necessary */
+            line-height: 1.2;
+        }
+
+mat-card{
+    background-color: transparent !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+    mat-card-title{
+        font-size: 24px !important;
+        padding-bottom: 60px;
+    }
+
+    mat-card-header.userSettingsTitle{
+        padding-top: 0px !important;
+    }
+
+    mat-card-header.deleteUserAccountTitle{
+        padding: 0px !important;
+    }
+
+    mat-card.logoTitle{
+        margin-left: 420px;
+    }
+
+    mat-card.userSettingsCard{
+        position:absolute;
+        margin-left: 420px;
+        top: 180px;
+    }
+
+    mat-card.deleteUserAccount{
+        position:absolute;
+        margin-left: 1030px;
+        top: 180px;
+        width: 450px;
+    }
+
+    mat-card.alertifyTitle {
+        margin-left: 420px;
+        height: 100px;
+        width: 270px;
+        position: relative;
+        top: 20px;
+    }
+
+div.buttonContainer{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+button.generalButton{
+    color: white !important;
+    font-family: 'Roboto', sans-serif !important;
+    width: 160px !important;
+    height: 40px !important;
+    font-size: 14px !important;
+    border-radius: 100px !important;
+    white-space: nowrap !important;
+    letter-spacing: 0px !important;
+    justify-content: center !important;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important; 
+}
+
+    button#saveButton{
+        margin-top: 30px;
+        background-color: #005d52 !important;
+    }
+
+    button#cancelButton{
+        margin-top: 30px;
+        background-color: #D34F12 !important;
+    }
+
+    button#deleteUserAccountButton{
+        margin-top: 38px;
+        background-color: #D34F12 !important;
+    }
+
+    mat-form-field {
+        position: relative;
+        width: 345px;
+        height: auto;
+        margin-bottom: 30px;
+    }
+
+    .mdc-line-ripple {
+        --mdc-filled-text-field-focus-active-indicator-color: #4C7573 !important; 
+    }
+
+    .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+        background-color: #e2e2e2 !important;
+    }
+
+    .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-text-field__input {
+        color: #5e5e5e !important;
+    }
+
+    input {
+        color: #5e5e5e; 
+    }
+
+    mat-label.formLabel {
+        color: #5e5e5e;
+    }
+
+    mat-hint {
+        color: #c6c6c6;
+    }
+
+    :root{
+        --mat-datepicker-toggle-active-state-icon-color: #005d52 !important;
+        --mat-datepicker-toggle-icon-color: #5e5e5e;
+        --mat-datepicker-calendar-date-text-color: #5e5e5e;
+        --mat-datepicker-calendar-body-label-text-color: #5e5e5e;
+        --mat-datepicker-calendar-header-text-color: #5e5e5e;
+        --mat-datepicker-calendar-navigation-button-icon-color: #5e5e5e;
+        --mat-datepicker-calendar-date-today-outline-color: #4C7573;
+        --mdc-text-button-label-text-color: #5e5e5e;
+        --mat-datepicker-calendar-date-selected-state-background-color: #005d52;
+        --mat-datepicker-calendar-date-selected-disabled-state-background-color: #6D9D99 !important;
+        --mat-datepicker-calendar-date-focus-state-background-color:#6D9D99 !important;
+        --mat-datepicker-calendar-date-hover-state-background-color: #6D9D99 !important;
+    }
+
+        .mat-datepicker-content{
+            background-color: #e2e2e2 !important;
+        }
+
+        .mat-mdc-button.mat-unthemed {
+            --mdc-text-button-label-text-color: #5e5e5e !important;
+        }
+
+        .mat-calendar-arrow{
+            --mat-datepicker-calendar-period-button-icon-color: #5e5e5e;
+        }
+
+        .mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical) {
+            background-color: #6D9D99 !important;
+            color: #fff !important;
+        }
